@@ -18,17 +18,6 @@ Description: SSL shared libraries
  .
  It is part of the OpenSSL implementation of SSL.
 
-Package: libssl0.9.7-dev
-Section: libdevel
-Priority: optional
-Architecture: any
-Depends: libssl0.9.7 (= ${Source-Version})
-Conflicts: ssleay (<< 0.9.2b), libssl08-dev, libssl09-dev, libssl095a-dev, libssl096-dev, libssl-dev
-Description: SSL development libraries, header files and documentation
- libssl and libcrypt development libraries, header files and manpages
- .
- It is part of the OpenSSL implementation of SSL.
-
 Package: libssl0.9.7-dbg
 Section: libdevel
 Priority: extra
