@@ -1,3 +1,0 @@
-usr/lib
-usr/share/doc/libssl0.9.7-dev
-usr/share/man
